prj2-doks/k8s-multi-app-ingress/deploiement-html.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: projet1-html-deployment
spec:
  replicas: 3
  selector:
    matchLabels:
      app: nginx
  template:
    metadata:
      labels:
        app: nginx
    spec:
      containers:
      - name: nginx-container
        image: thierno9/projet1-html-jeudi
        ports:
        - containerPort: 80
