prj2-doks/k8s-multi-app-ingress/service-cookchef.yml
apiVersion: v1
kind: Service
metadata:
  name: projet-cookchef-service
spec:
  selector:
    app: nginx-cookchef
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
