prj2-doks/k8s-multi-app-ingress/service-html.yml
apiVersion: v1
kind: Service
metadata:
  name: projet1-html-service
spec:
  type: ClusterIP
  selector:
    app: nginx
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
