prj2-doks/k8s-multi-app-ingress/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: mon-ingress
spec:
    ingressClassName: nginx
    rules:
      - http:
          paths:
          - pathType: Exact
            path: "/h"
            backend:
              service:
                name: projet1-html-service
                port:
                  number: 80
          - pathType: Exact
            path: "/ch"
            backend:
              service:
                name: projet-cookchef-service
                port:
                  number: 80
